Applied check style.
SVN-Revision: 22308