@@ -52,6 +52,7 @@ import edu.wustl.common.exception.ErrorKey;
 import edu.wustl.common.factory.AbstractFactoryConfig;
 import edu.wustl.common.factory.IFactory;
 import edu.wustl.common.util.global.ApplicationProperties;
+import edu.wustl.common.util.global.CommonUtilities;
 import edu.wustl.common.util.global.Status;
 import edu.wustl.common.util.global.Validator;
 import edu.wustl.common.util.logger.Logger;
@@ -67,74 +68,92 @@ import edu.wustl.security.exception.UserNotAuthorizedException;
 /**
  * @author mandar_deshmukh</p>
  * This class contains the Business Logic for all EventParameters Classes.
- * This will be the class which will be used for data transactions of the EventParameters. 
+ * This will be the class which will be used for data transactions of the EventParameters.
  */
 public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 {
 
-	private transient Logger logger = Logger.getCommonLogger(SpecimenEventParametersBizLogic.class);
+	/**
+	 * Logger object.
+	 */
+	private transient final Logger logger = Logger
+			.getCommonLogger(SpecimenEventParametersBizLogic.class);
+
 	/**
 	 * Saves the FrozenEventParameters object in the database.
 	 * @param obj The FrozenEventParameters object to be saved.
 	 * @param session The session in which the object is saved.
-	 * @throws BizLogicException 
+	 * @throws BizLogicException throws BizLogicException. 
 	 */
-	protected void insert(Object obj, DAO dao, SessionDataBean sessionDataBean) throws BizLogicException
+	@Override
+	protected void insert(Object obj, DAO dao, SessionDataBean sessionDataBean)
+			throws BizLogicException
 	{
-		IFactory factory = AbstractFactoryConfig.getInstance().getBizLogicFactory();
-		NewSpecimenBizLogic newSpecimenBizLogic = (NewSpecimenBizLogic) factory.getBizLogic(
-				Constants.NEW_SPECIMEN_FORM_ID);
+		final IFactory factory = AbstractFactoryConfig.getInstance().getBizLogicFactory();
+		final NewSpecimenBizLogic newSpecimenBizLogic = (NewSpecimenBizLogic) factory
+				.getBizLogic(Constants.NEW_SPECIMEN_FORM_ID);
 		//For bulk operations 
-		List specimenIds=new ArrayList();
+		final List specimenIds = new ArrayList();
 		if (obj instanceof List)
 		{
-			List eventObjectsList = (List) obj;
-			
-			for(int i=0; i<eventObjectsList.size(); i++)
+			final List eventObjectsList = (List) obj;
+
+			for (int i = 0; i < eventObjectsList.size(); i++)
 			{
-				specimenIds.add(((SpecimenEventParameters)eventObjectsList.get(i)).getSpecimen().getId());
+				specimenIds.add(((SpecimenEventParameters) eventObjectsList.get(i)).getSpecimen()
+						.getId());
 			}
-			
-			for(int i=0; i<eventObjectsList.size(); i++)
+
+			for (int i = 0; i < eventObjectsList.size(); i++)
 			{
-				insertEvent(eventObjectsList.get(i), dao, sessionDataBean, newSpecimenBizLogic,specimenIds);
+				this.insertEvent(eventObjectsList.get(i), dao, sessionDataBean,
+						newSpecimenBizLogic, specimenIds);
 			}
 		}
 		else
 		{
-			insertEvent(obj, dao, sessionDataBean, newSpecimenBizLogic,specimenIds);
+			this.insertEvent(obj, dao, sessionDataBean, newSpecimenBizLogic, specimenIds);
 		}
 	}
 
-	private void insertEvent(Object obj, DAO dao, SessionDataBean sessionDataBean, NewSpecimenBizLogic newSpecimenBizLogic,List specimenIds) throws BizLogicException
+	/**
+	 * @param obj - Object.
+	 * @param dao - DAO object.
+	 * @param sessionDataBean - SessionDataBean object
+	 * @param newSpecimenBizLogic - NewSpecimenBizLogic object
+	 * @param specimenIds - List of specimenIds
+	 * @throws BizLogicException throws BizLogicException
+	 */
+	private void insertEvent(Object obj, DAO dao, SessionDataBean sessionDataBean,
+			NewSpecimenBizLogic newSpecimenBizLogic, List specimenIds) throws BizLogicException
 	{
 		try
-		{			
-			SpecimenEventParameters specimenEventParametersObject = (SpecimenEventParameters) obj;
+		{
+			final SpecimenEventParameters specimenEventParametersObject = (SpecimenEventParameters) obj;
 
-			Object object = dao.retrieveById(User.class.getName(), specimenEventParametersObject.getUser().getId());
-			if (object !=null)
+			final Object object = dao.retrieveById(User.class.getName(),
+					specimenEventParametersObject.getUser().getId());
+			if (object != null)
 			{
-				User user = (User) object;
+				final User user = (User) object;
 				// check for closed User
-				checkStatus(dao, user, "User");
+				this.checkStatus(dao, user, "User");
 
 				specimenEventParametersObject.setUser(user);
 			}
-//			Ashish - 6/6/07 - performance improvement
-			Object specimenObject = dao.retrieveById(Specimen.class.getName(), specimenEventParametersObject.getSpecimen().getId());
-			Specimen specimen = (Specimen) specimenObject;
-			//(Specimen) dao.retrieveAttribute(SpecimenEventParameters.class.getName(), specimenEventParametersObject.getSpecimen().getId(),"specimen");
-			//(Specimen.class.getName(), specimenEventParametersObject.getSpecimen().getId(),Constants.SYSTEM_IDENTIFIER);
+			//			Ashish - 6/6/07 - performance improvement
+			final Object specimenObject = dao.retrieveById(Specimen.class.getName(),
+					specimenEventParametersObject.getSpecimen().getId());
+			final Specimen specimen = (Specimen) specimenObject;
 			// check for closed Specimen
-			
+
 			if (specimenEventParametersObject instanceof DisposalEventParameters)
 			{
-				checkStatus(dao, specimen, Constants.DISPOSAL_EVENT_PARAMETERS);
+				this.checkStatus(dao, specimen, Constants.DISPOSAL_EVENT_PARAMETERS);
 			}
 			else
 			{
-				checkStatus(dao, specimen, Constants.SPECIMEN);
+				this.checkStatus(dao, specimen, Constants.SPECIMEN);
 			}
 
 			if (specimen != null)
@@ -142,39 +161,29 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 				specimenEventParametersObject.setSpecimen(specimen);
 				if (specimenEventParametersObject instanceof TransferEventParameters)
 				{
-					TransferEventParameters transferEventParameters = (TransferEventParameters) specimenEventParametersObject;
+					final TransferEventParameters transferEventParameters = (TransferEventParameters) specimenEventParametersObject;
 
-					/*specimen.setPositionDimensionOne(transferEventParameters.getToPositionDimensionOne());
-					 specimen.setPositionDimensionTwo(transferEventParameters.getToPositionDimensionTwo());*/
-
-					//				StorageContainer storageContainer = (StorageContainer) dao.retrieve(StorageContainer.class.getName(), transferEventParameters
-					//						.getToStorageContainer().getId());
 					StorageContainer storageContainerObj = new StorageContainer();
-					
+
 					List stNamelist = null;
-					String sourceObjectName = StorageContainer.class.getName();
+					final String sourceObjectName = StorageContainer.class.getName();
 					String[] selectColumnName = null;
-					String[] whereColumnName = null; //"storageContainer."+Constants.SYSTEM_IDENTIFIER
-					String[] whereColumnCondition = null;
-					Object[] whereColumnValue = null;
-					String joinCondition = null;
-					
 					storageContainerObj = transferEventParameters.getToStorageContainer();
-					if (storageContainerObj != null && (storageContainerObj.getId()!=null || storageContainerObj.getName()!=null))
+					if (storageContainerObj != null
+							&& (storageContainerObj.getId() != null || storageContainerObj
+									.getName() != null))
 					{
-						if(storageContainerObj.getId() == null)
+						if (storageContainerObj.getId() == null)
 						{
 							//storageContainerObj.setId(storageContainerObj.getId());
 							selectColumnName = new String[]{"id"};
-							/*	whereColumnName = new String[]{"name"}; //"storageContainer."+edu.wustl.common.util.global.Constants.SYSTEM_IDENTIFIER
-							whereColumnCondition = new String[]{"="};
-							whereColumnValue = new Object[]{transferEventParameters.getToStorageContainer().getName()};
-							joinCondition = null;*/
+							final QueryWhereClause queryWhereClause = new QueryWhereClause(
+									sourceObjectName);
+							queryWhereClause.addCondition(new EqualClause("name",
+									transferEventParameters.getToStorageContainer().getName()));
 
-							QueryWhereClause queryWhereClause = new QueryWhereClause(sourceObjectName);
-							queryWhereClause.addCondition(new EqualClause("name",transferEventParameters.getToStorageContainer().getName()));
-
-							stNamelist = dao.retrieve(sourceObjectName, selectColumnName, queryWhereClause);
+							stNamelist = dao.retrieve(sourceObjectName, selectColumnName,
+									queryWhereClause);
 							if (!stNamelist.isEmpty())
 							{
 								storageContainerObj.setId((Long) (stNamelist.get(0)));
@@ -184,49 +193,45 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 						{
 							//storageContainerObj.setId(transferEventParameters.getToStorageContainer().getId());
 							selectColumnName = new String[]{"name"};
-							/*whereColumnName = new String[]{"id"}; //"storageContainer."+edu.wustl.common.util.global.Constants.SYSTEM_IDENTIFIER
-							whereColumnCondition = new String[]{"="};
-							whereColumnValue = new Object[]{transferEventParameters.getToStorageContainer().getId()};
-							joinCondition = null;*/
+							final QueryWhereClause queryWhereClause = new QueryWhereClause(
+									sourceObjectName);
+							queryWhereClause.addCondition(new EqualClause("id",
+									transferEventParameters.getToStorageContainer().getId()));
 
-							QueryWhereClause queryWhereClause = new QueryWhereClause(sourceObjectName);
-							queryWhereClause.addCondition(new EqualClause("id",transferEventParameters.getToStorageContainer().getId()));
-
-							stNamelist = dao.retrieve(sourceObjectName, selectColumnName, queryWhereClause);
+							stNamelist = dao.retrieve(sourceObjectName, selectColumnName,
+									queryWhereClause);
 							if (!stNamelist.isEmpty())
 							{
 								storageContainerObj.setName((String) stNamelist.get(0));
 							}
-
 						}
-						
 						// check for closed StorageContainer
-						checkStatus(dao, storageContainerObj, "Storage Container");
-	
-						IFactory factory = AbstractFactoryConfig.getInstance().getBizLogicFactory();
-						StorageContainerBizLogic storageContainerBizLogic = (StorageContainerBizLogic) factory.getBizLogic(
-								Constants.STORAGE_CONTAINER_FORM_ID);
-	
+						this.checkStatus(dao, storageContainerObj, "Storage Container");
+
+						final IFactory factory = AbstractFactoryConfig.getInstance()
+								.getBizLogicFactory();
+						final StorageContainerBizLogic storageContainerBizLogic = (StorageContainerBizLogic) factory
+								.getBizLogic(Constants.STORAGE_CONTAINER_FORM_ID);
+
 						// --- check for all validations on the storage container.
-						storageContainerBizLogic.checkContainer(dao, storageContainerObj.getId().toString(), transferEventParameters
-								.getToPositionDimensionOne().toString(), transferEventParameters.getToPositionDimensionTwo().toString(), sessionDataBean,false,null);
-						
-					
-						//storageContainerObj.setHoldsSpecimenClassCollection(storageContainerBizLogic.getSpecimenClassList(storageContainerObj.getId().toString()));
-						//storageContainerObj.setCollectionProtocolCollection(storageContainerBizLogic.getCollectionProtocolList(storageContainerObj.getId().toString()));
-						SpecimenCollectionGroup scg = (SpecimenCollectionGroup)retrieveAttribute(dao,Specimen.class,
-								specimen.getId(),"specimenCollectionGroup");
+						storageContainerBizLogic.checkContainer(dao, storageContainerObj.getId()
+								.toString(), transferEventParameters.getToPositionDimensionOne()
+								.toString(), transferEventParameters.getToPositionDimensionTwo()
+								.toString(), sessionDataBean, false, null);
+						final SpecimenCollectionGroup scg = (SpecimenCollectionGroup) this
+								.retrieveAttribute(dao, Specimen.class, specimen.getId(),
+										"specimenCollectionGroup");
 						specimen.setSpecimenCollectionGroup(scg);
-						newSpecimenBizLogic.chkContainerValidForSpecimen(storageContainerObj, specimen, dao);
-						
+						newSpecimenBizLogic.chkContainerValidForSpecimen(storageContainerObj,
+								specimen, dao);
 					}
 					else
 					{
 						storageContainerObj = null;
 					}
-					
+
 					SpecimenPosition specimenPosition = specimen.getSpecimenPosition();
-					if(specimenPosition==null)
+					if (specimenPosition == null)
 					{
 						// trasfering from virtual location
 						specimenPosition = new SpecimenPosition();
@@ -234,32 +239,34 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 						specimen.setSpecimenPosition(specimenPosition);
 					}
 					specimenPosition.setStorageContainer(storageContainerObj);
-					specimenPosition.setPositionDimensionOne(transferEventParameters.getToPositionDimensionOne());
-					specimenPosition.setPositionDimensionTwo(transferEventParameters.getToPositionDimensionTwo());
-					
-					
+					specimenPosition.setPositionDimensionOne(transferEventParameters
+							.getToPositionDimensionOne());
+					specimenPosition.setPositionDimensionTwo(transferEventParameters
+							.getToPositionDimensionTwo());
+
 					dao.update(specimen);
 					transferEventParameters.setToStorageContainer(storageContainerObj);
 				}
 				if (specimenEventParametersObject instanceof DisposalEventParameters)
 				{
-					DisposalEventParameters disposalEventParameters = (DisposalEventParameters) specimenEventParametersObject;
-					if (disposalEventParameters.getActivityStatus().equals(Status.ACTIVITY_STATUS_DISABLED.getStatus()))
+					final DisposalEventParameters disposalEventParameters = (DisposalEventParameters) specimenEventParametersObject;
+					if (disposalEventParameters.getActivityStatus().equals(
+							Status.ACTIVITY_STATUS_DISABLED.getStatus()))
 					{
-						disableSubSpecimens(dao, specimen.getId().toString(),specimenIds);
+						this.disableSubSpecimens(dao, specimen.getId().toString(), specimenIds);
 
 					}
 					Map disabledCont = null;
 					try
 					{
-						disabledCont = getContForDisabledSpecimenFromCache();
+						disabledCont = this.getContForDisabledSpecimenFromCache();
 					}
-					catch (Exception e1)
+					catch (final Exception e1)
 					{
-						logger.debug(e1.getMessage(), e1);
+						this.logger.debug(e1.getMessage(), e1);
 						e1.printStackTrace();
 					}
-					if(disabledCont == null)
+					if (disabledCont == null)
 					{
 						disabledCont = new TreeMap();
 					}
@@ -269,22 +276,21 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 					 * Retrive Storage Container from specimen
 					 */
 					Object objectContainer = null;
-					if(specimen.getSpecimenPosition() != null && specimen.getSpecimenPosition().getStorageContainer()!=null && specimen.getSpecimenPosition().getStorageContainer().getId()!=null)
+					if (specimen.getSpecimenPosition() != null
+							&& specimen.getSpecimenPosition().getStorageContainer() != null
+							&& specimen.getSpecimenPosition().getStorageContainer().getId() != null)
 					{
-						objectContainer = dao.retrieveById(StorageContainer.class.getName(), specimen.getSpecimenPosition().getStorageContainer().getId());
+						objectContainer = dao.retrieveById(StorageContainer.class.getName(),
+								specimen.getSpecimenPosition().getStorageContainer().getId());
 					}
-					if(objectContainer != null)
+					if (objectContainer != null)
 					{
-						
-						StorageContainer storageContainer = (StorageContainer)objectContainer;
-						addEntriesInDisabledMap(specimen, storageContainer, disabledCont);
-					}
-					SpecimenPosition prevPosition = specimen.getSpecimenPosition(); 
-					specimen.setSpecimenPosition(null);
-//					specimen.setPositionDimensionOne(null);
-//					specimen.setPositionDimensionTwo(null);
-//					specimen.setStorageContainer(null);
 
+						final StorageContainer storageContainer = (StorageContainer) objectContainer;
+						this.addEntriesInDisabledMap(specimen, storageContainer, disabledCont);
+					}
+					final SpecimenPosition prevPosition = specimen.getSpecimenPosition();
+					specimen.setSpecimenPosition(null);
 					specimen.setIsAvailable(new Boolean(false));
 					specimen.setActivityStatus(disposalEventParameters.getActivityStatus());
 					/**
@@ -294,77 +300,90 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 					 */
 					//Specimen proxySpecimen = (Specimen)HibernateMetaData.getProxyObjectImpl(specimen);
 					dao.update(specimen);
-					if(prevPosition!=null)
+					if (prevPosition != null)
 					{
 						dao.delete(prevPosition);
-					}	
+					}
 					try
 					{
-						CatissueCoreCacheManager catissueCoreCacheManager = CatissueCoreCacheManager.getInstance();
-						catissueCoreCacheManager.addObjectToCache(Constants.MAP_OF_CONTAINER_FOR_DISABLED_SPECIEN, (Serializable) disabledCont);
+						final CatissueCoreCacheManager catissueCoreCacheManager = CatissueCoreCacheManager
+								.getInstance();
+						catissueCoreCacheManager.addObjectToCache(
+								Constants.MAP_OF_CONTAINER_FOR_DISABLED_SPECIEN,
+								(Serializable) disabledCont);
 					}
-					catch (CacheException e)
+					catch (final CacheException e)
 					{
-						logger.debug(e.getMessage(), e);
+						this.logger.debug(e.getMessage(), e);
 					}
 
 				}
 
 			}
-			
+
 			specimen.getSpecimenEventCollection().add(specimenEventParametersObject);
 			dao.insert(specimenEventParametersObject);
-			AuditManager auditManager = getAuditManager(sessionDataBean);
-			auditManager.insertAudit(dao,specimenEventParametersObject);
+			final AuditManager auditManager = this.getAuditManager(sessionDataBean);
+			auditManager.insertAudit(dao, specimenEventParametersObject);
 		}
-		catch (DAOException daoExp)
+		catch (final DAOException daoExp)
 		{
-			logger.debug(daoExp.getMessage(), daoExp);
-			throw getBizLogicException(daoExp, daoExp.getErrorKeyName(),daoExp.getMsgValues());
-		} catch (AuditException e) {
-			logger.debug(e.getMessage(), e);
-			throw getBizLogicException(e, e.getErrorKeyName(),e.getMsgValues());
+			this.logger.debug(daoExp.getMessage(), daoExp);
+			throw this
+					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
+		}
+		catch (final AuditException e)
+		{
+			this.logger.debug(e.getMessage(), e);
+			throw this.getBizLogicException(e, e.getErrorKeyName(), e.getMsgValues());
 		}
 	}
 
 	/**
 	 * Method overridden from DefaultBizLogic.java. This method checks for the specimens status
-	 * wheather it is closed. If the event is disposal only then it does not throws exception.
+	 * whether it is closed. If the event is disposal only then it does not throws exception.
 	 * @param dao DAo object.
 	 * @param specimen Specimen object on which event is happened.
 	 * @param objectType for knowing which event is happened.
 	 * @throws BizLogicException DAO Exception.
 	 */
-	protected void checkStatus(DAO dao, Specimen specimen, String objectType) throws BizLogicException
+	protected void checkStatus(DAO dao, Specimen specimen, String objectType)
+			throws BizLogicException
 	{
 		if (specimen != null)
 		{
-			Long identifier = specimen.getId();
+			final Long identifier = specimen.getId();
 			if (identifier != null)
 			{
-				String className = specimen.getClass().getName();
+				final String className = specimen.getClass().getName();
 				String activityStatus = specimen.getActivityStatus();
-				if(activityStatus == null)
+				if (activityStatus == null)
 				{
-					activityStatus = getActivityStatus(dao, className, identifier);
+					activityStatus = this.getActivityStatus(dao, className, identifier);
 				}
-				
-				if (Status.ACTIVITY_STATUS_CLOSED.toString().equals(activityStatus) &&
-						(!Constants.DISPOSAL_EVENT_PARAMETERS.equals(objectType)))
+
+				if (Status.ACTIVITY_STATUS_CLOSED.toString().equals(activityStatus)
+						&& (!Constants.DISPOSAL_EVENT_PARAMETERS.equals(objectType)))
 				{
-					throw getBizLogicException(null, "error.object.closed", objectType);
+					throw this.getBizLogicException(null, "error.object.closed", objectType);
 				}
 			}
 		}
 	}
-	
-	private void addEntriesInDisabledMap(Specimen specimen, StorageContainer container, Map disabledConts)
+
+	/**
+	 * @param specimen - Specimen object.
+	 * @param container - StorageContainer object
+	 * @param disabledConts - Map of disabledConts
+	 */
+	private void addEntriesInDisabledMap(Specimen specimen, StorageContainer container,
+			Map disabledConts)
 	{
-		String contNameKey = "StorageContName";
-		String contIdKey = "StorageContIdKey";
-		String pos1Key = "pos1";
-		String pos2Key = "pos2";
-		Map containerDetails = new TreeMap();
+		final String contNameKey = "StorageContName";
+		final String contIdKey = "StorageContIdKey";
+		final String pos1Key = "pos1";
+		final String pos2Key = "pos2";
+		final Map containerDetails = new TreeMap();
 		containerDetails.put(contNameKey, container.getName());
 		containerDetails.put(contIdKey, container.getId());
 		containerDetails.put(pos1Key, specimen.getSpecimenPosition().getPositionDimensionOne());
@@ -374,142 +393,154 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 
 	}
 
-	public void postInsert(Object obj, DAO dao, SessionDataBean sessionDataBean) throws BizLogicException
+	@Override
+	public void postInsert(Object obj, DAO dao, SessionDataBean sessionDataBean)
+			throws BizLogicException
 	{
 		//For bulk operations
 		if (obj instanceof List)
 		{
-			List events = (List)obj;
-			for(int i =0; i<events.size();i++)
+			final List events = (List) obj;
+			for (int i = 0; i < events.size(); i++)
 			{
-				postInsertPerEvent(events.get(i), dao);
+				this.postInsertPerEvent(events.get(i), dao);
 			}
 			CatissueCoreCacheManager catissueCoreCacheManager;
 			try
 			{
 				catissueCoreCacheManager = CatissueCoreCacheManager.getInstance();
-				catissueCoreCacheManager.removeObjectFromCache(Constants.MAP_OF_CONTAINER_FOR_DISABLED_SPECIEN);
+				catissueCoreCacheManager
+						.removeObjectFromCache(Constants.MAP_OF_CONTAINER_FOR_DISABLED_SPECIEN);
 			}
-			catch (CacheException e)
+			catch (final CacheException e)
 			{
-				logger.debug(e.getMessage(),e);
+				this.logger.debug(e.getMessage(), e);
 			}
-			
+
 		}
 		else
 		{
-			postInsertPerEvent(obj, dao);
+			this.postInsertPerEvent(obj, dao);
 		}
 		super.postInsert(obj, dao, sessionDataBean);
 	}
 
+	/**
+	 * @param obj - Object.
+	 * @param dao - DAO object
+	 */
 	private void postInsertPerEvent(Object obj, DAO dao)
 	{
-		SpecimenEventParameters specimenEventParametersObject = (SpecimenEventParameters) obj;
+		final SpecimenEventParameters specimenEventParametersObject = (SpecimenEventParameters) obj;
 		try
 		{
 			if (specimenEventParametersObject instanceof TransferEventParameters)
 			{
-				TransferEventParameters transferEventParameters = (TransferEventParameters) specimenEventParametersObject;
+				final TransferEventParameters transferEventParameters = (TransferEventParameters) specimenEventParametersObject;
 
-				Map containerMap = StorageContainerUtil.getContainerMapFromCache();
+				final Map containerMap = StorageContainerUtil.getContainerMapFromCache();
 
 				if (transferEventParameters.getFromStorageContainer() != null)
 				{
-					StorageContainer storageContainerFrom = (StorageContainer) dao.retrieveById(StorageContainer.class.getName(), transferEventParameters
-							.getFromStorageContainer().getId());
-					StorageContainerUtil.insertSinglePositionInContainerMap(storageContainerFrom, containerMap, transferEventParameters
-							.getFromPositionDimensionOne().intValue(), transferEventParameters.getFromPositionDimensionTwo().intValue());
+					final StorageContainer storageContainerFrom = (StorageContainer) dao
+							.retrieveById(StorageContainer.class.getName(), transferEventParameters
+									.getFromStorageContainer().getId());
+					StorageContainerUtil.insertSinglePositionInContainerMap(storageContainerFrom,
+							containerMap, transferEventParameters.getFromPositionDimensionOne()
+									.intValue(), transferEventParameters
+									.getFromPositionDimensionTwo().intValue());
 
 				}
 
-				StorageContainer storageContainerTo = (StorageContainer) dao.retrieveById(StorageContainer.class.getName(), transferEventParameters
-						.getToStorageContainer().getId());
-				StorageContainerUtil.deleteSinglePositionInContainerMap(storageContainerTo, containerMap, transferEventParameters
-						.getToPositionDimensionOne().intValue(), transferEventParameters.getToPositionDimensionTwo().intValue());
+				final StorageContainer storageContainerTo = (StorageContainer) dao.retrieveById(
+						StorageContainer.class.getName(), transferEventParameters
+								.getToStorageContainer().getId());
+				StorageContainerUtil.deleteSinglePositionInContainerMap(storageContainerTo,
+						containerMap, transferEventParameters.getToPositionDimensionOne()
+								.intValue(), transferEventParameters.getToPositionDimensionTwo()
+								.intValue());
 
 			}
 			if (specimenEventParametersObject instanceof DisposalEventParameters)
 			{
 
-				DisposalEventParameters disposalEventParameters = (DisposalEventParameters) specimenEventParametersObject;
-				Map containerMap = StorageContainerUtil.getContainerMapFromCache();
+				final DisposalEventParameters disposalEventParameters = (DisposalEventParameters) specimenEventParametersObject;
+				final Map containerMap = StorageContainerUtil.getContainerMapFromCache();
 				if (disposalEventParameters.getSpecimen() != null)
 				{
 
-					Map disabledConts = getContForDisabledSpecimenFromCache();
+					final Map disabledConts = this.getContForDisabledSpecimenFromCache();
 
-					Set keySet = disabledConts.keySet();
-					Iterator itr = keySet.iterator();
+					final Set keySet = disabledConts.keySet();
+					final Iterator itr = keySet.iterator();
 					while (itr.hasNext())
 					{
-						String Id = (String) itr.next();
-						Map disabledContDetails = (TreeMap) disabledConts.get(Id);
-						String contNameKey = "StorageContName";
+						final String Id = (String) itr.next();
+						final Map disabledContDetails = (TreeMap) disabledConts.get(Id);
+						final String contNameKey = "StorageContName";
 						//String contIdKey = "StorageContIdKey";
-						String pos1Key = "pos1";
-						String pos2Key = "pos2";
+						final String pos1Key = "pos1";
+						final String pos2Key = "pos2";
 
-						StorageContainer cont = new StorageContainer();
+						final StorageContainer cont = new StorageContainer();
 						cont.setId(new Long(Id));
 						cont.setName((String) disabledContDetails.get(contNameKey));
-						int x = ((Integer) disabledContDetails.get(pos1Key)).intValue();
-						int y = ((Integer) disabledContDetails.get(pos2Key)).intValue();
-
-						StorageContainerUtil.insertSinglePositionInContainerMap(cont, containerMap, x, y);
+						final int x = ((Integer) disabledContDetails.get(pos1Key)).intValue();
+						final int y = ((Integer) disabledContDetails.get(pos2Key)).intValue();
+						StorageContainerUtil.insertSinglePositionInContainerMap(cont, containerMap,
+								x, y);
 					}
-
-					/*StorageContainer storageContainer = disposalEventParameters.getSpecimen().getStorageContainer();
-					 if (storageContainer != null)
-					 {
-					 storageContainerBizLogic.insertSinglePositionInContainerMap(storageContainer, containerMap, storageContainer
-					 .getPositionDimensionOne().intValue(), storageContainer.getPositionDimensionTwo().intValue());
-					 }*/
-
 				}
 
 			}
 		}
-		catch (Exception e)
+		catch (final Exception e)
 		{
-			logger.debug(e.getMessage(), e);
+			this.logger.debug(e.getMessage(), e);
 		}
 	}
 
 	/**
 	 * Updates the persistent object in the database.
+	 * @param dao - DAO object
 	 * @param obj The object to be updated.
-	 * @param session The session in which the object is saved.
-	 * @throws BizLogicException 
+	 *  @param oldObj - Object
+	 * @param SessionDataBean The session in which the object is saved.
+	 * @throws BizLogicException throws BizLogicException
 	 */
-	protected void update(DAO dao, Object obj, Object oldObj, SessionDataBean sessionDataBean) throws BizLogicException
+	@Override
+	protected void update(DAO dao, Object obj, Object oldObj, SessionDataBean sessionDataBean)
+			throws BizLogicException
 	{
 		try
 		{
-			SpecimenEventParameters specimenEventParameters = (SpecimenEventParameters) obj;
-			SpecimenEventParameters oldSpecimenEventParameters = (SpecimenEventParameters) oldObj;
+			final SpecimenEventParameters specimenEventParameters = (SpecimenEventParameters) obj;
+			final SpecimenEventParameters oldSpecimenEventParameters = (SpecimenEventParameters) oldObj;
 			// Check for different User
-			if (!specimenEventParameters.getUser().getId().equals(oldSpecimenEventParameters.getUser().getId()))
+			if (!specimenEventParameters.getUser().getId().equals(
+					oldSpecimenEventParameters.getUser().getId()))
 			{
-				checkStatus(dao, specimenEventParameters.getUser(), "User");
+				this.checkStatus(dao, specimenEventParameters.getUser(), "User");
 			}
-			Specimen specimen = (Specimen)HibernateMetaData.getProxyObjectImpl(specimenEventParameters.getSpecimen());
-			List specimenIds=new ArrayList();
+			final Specimen specimen = (Specimen) HibernateMetaData
+					.getProxyObjectImpl(specimenEventParameters.getSpecimen());
+			final List specimenIds = new ArrayList();
 			if (specimenEventParameters instanceof DisposalEventParameters)
 			{
-				DisposalEventParameters disposalEventParameters =
-					(DisposalEventParameters) specimenEventParameters;
-				SpecimenPosition prevPosition = specimen.getSpecimenPosition(); 
+				final DisposalEventParameters disposalEventParameters = (DisposalEventParameters) specimenEventParameters;
+				final SpecimenPosition prevPosition = specimen.getSpecimenPosition();
 				specimen.setSpecimenPosition(null);
 				specimen.setIsAvailable(new Boolean(false));
-				specimen.setActivityStatus(((DisposalEventParameters)specimenEventParameters).getActivityStatus());
+				specimen.setActivityStatus(((DisposalEventParameters) specimenEventParameters)
+						.getActivityStatus());
 				//Update Specimen
-				if (disposalEventParameters.getActivityStatus().equals(Status.ACTIVITY_STATUS_DISABLED.toString()))
+				if (disposalEventParameters.getActivityStatus().equals(
+						Status.ACTIVITY_STATUS_DISABLED.toString()))
 				{
-					disableSubSpecimens(dao, specimen.getId().toString(), specimenIds);
+					this.disableSubSpecimens(dao, specimen.getId().toString(), specimenIds);
 				}
 				dao.update(specimen);
-				if(prevPosition!=null)
+				if (prevPosition != null)
 				{
 					dao.delete(prevPosition);
 				}
@@ -517,16 +548,19 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 			//Update registration
 			dao.update(specimenEventParameters);
 			//Audit.
-			AuditManager auditManager = getAuditManager(sessionDataBean);
-			auditManager.updateAudit(dao,obj, oldObj);
+			final AuditManager auditManager = this.getAuditManager(sessionDataBean);
+			auditManager.updateAudit(dao, obj, oldObj);
 		}
-		catch(DAOException daoExp)
+		catch (final DAOException daoExp)
 		{
-			logger.debug(daoExp.getMessage(), daoExp);
-			throw getBizLogicException(daoExp, daoExp.getErrorKeyName(),daoExp.getMsgValues());
-		} catch (AuditException e) {
-			logger.debug(e.getMessage(), e);
-			throw getBizLogicException(e, e.getErrorKeyName(),e.getMsgValues());
+			this.logger.debug(daoExp.getMessage(), daoExp);
+			throw this
+					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
+		}
+		catch (final AuditException e)
+		{
+			this.logger.debug(e.getMessage(), e);
+			throw this.getBizLogicException(e, e.getErrorKeyName(), e.getMsgValues());
 		}
 
 	}
@@ -534,15 +568,16 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 	/**
 	 * Overriding the parent class's method to validate the enumerated attribute values
 	 */
+	@Override
 	protected boolean validate(Object obj, DAO dao, String operation) throws BizLogicException
 	{
 		// For bulk operations
 		if (obj instanceof List)
 		{
-			List events = (List) obj;
+			final List events = (List) obj;
 
 			//This map maintains the current event no being added per container
-			Map containerEventNumberMap = new HashMap();
+			final Map containerEventNumberMap = new HashMap();
 
 			SpecimenEventParameters specimenEventParameters = null;
 
@@ -556,13 +591,15 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 
 				if (specimenEventParameters instanceof TransferEventParameters)
 				{
-					TransferEventParameters trEvent = (TransferEventParameters) specimenEventParameters;
-					eventNumber = (Integer) containerEventNumberMap.get(trEvent.getToStorageContainer().getName());
+					final TransferEventParameters trEvent = (TransferEventParameters) specimenEventParameters;
+					eventNumber = (Integer) containerEventNumberMap.get(trEvent
+							.getToStorageContainer().getName());
 					if (eventNumber == null)
 					{
 						eventNumber = new Integer(0);
 					}
-					containerEventNumberMap.put(trEvent.getToStorageContainer().getName(), new Integer(eventNumber.intValue() + 1));
+					containerEventNumberMap.put(trEvent.getToStorageContainer().getName(),
+							new Integer(eventNumber.intValue() + 1));
 				}
 				else
 				{
@@ -576,7 +613,8 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 					}
 				}
 
-				if (!validateSingleEvent(specimenEventParameters, dao, operation, eventNumber.intValue()))
+				if (!this.validateSingleEvent(specimenEventParameters, dao, operation, eventNumber
+						.intValue()))
 				{
 					return false;
 				}
@@ -584,14 +622,23 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 		}
 		else
 		{
-			return validateSingleEvent(obj, dao, operation, 0);
+			return this.validateSingleEvent(obj, dao, operation, 0);
 		}
 		return true;
 	}
 
-	private boolean validateSingleEvent(Object obj, DAO dao, String operation, int numberOfEvent) throws BizLogicException
+	/**
+	 * @param obj - Object.
+	 * @param dao - DAO object
+	 * @param operation - String
+	 * @param numberOfEvent - int
+	 * @return boolean value 
+	 * @throws BizLogicException throws BizLogicException.
+	 */
+	private boolean validateSingleEvent(Object obj, DAO dao, String operation, int numberOfEvent)
+			throws BizLogicException
 	{
-		SpecimenEventParameters eventParameter = (SpecimenEventParameters) obj;
+		final SpecimenEventParameters eventParameter = (SpecimenEventParameters) obj;
 
 		/**
 		 * Start: Change for API Search   --- Jitendra 06/10/2006
@@ -614,32 +661,37 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 		 * Description: Container field was not shown as mandatory on SpecimenEventsParameter page. 
 		 * Now container field is made mandatory. Also validation added for the same.
 		 */
-		Validator validator = new Validator();
+		final Validator validator = new Validator();
 		/** -- patch ends here --*/
-		
+
 		switch (AppUtility.getEventParametersFormId(eventParameter))
 		{
 			case Constants.CHECKIN_CHECKOUT_EVENT_PARAMETERS_FORM_ID :
-				String storageStatus = ((CheckInCheckOutEventParameter) eventParameter).getStorageStatus();
+				final String storageStatus = ((CheckInCheckOutEventParameter) eventParameter)
+						.getStorageStatus();
 				if (!Validator.isEnumeratedValue(Constants.STORAGE_STATUS_ARRAY, storageStatus))
 				{
-					throw getBizLogicException(null, "events.storageStatus.errMsg", "");
+					throw this.getBizLogicException(null, "events.storageStatus.errMsg", "");
 				}
 				break;
 
 			case Constants.COLLECTION_EVENT_PARAMETERS_FORM_ID :
-				String procedure = ((CollectionEventParameters) eventParameter).getCollectionProcedure();
-				List procedureList = CDEManager.getCDEManager().getPermissibleValueList(Constants.CDE_NAME_COLLECTION_PROCEDURE, null);
+				final String procedure = ((CollectionEventParameters) eventParameter)
+						.getCollectionProcedure();
+				final List procedureList = CDEManager.getCDEManager().getPermissibleValueList(
+						Constants.CDE_NAME_COLLECTION_PROCEDURE, null);
 				if (!Validator.isEnumeratedValue(procedureList, procedure))
 				{
-					throw getBizLogicException(null, "events.collectionProcedure.errMsg", "");
+					throw this.getBizLogicException(null, "events.collectionProcedure.errMsg", "");
 				}
 
-				String container = ((CollectionEventParameters) eventParameter).getContainer();
-				List containerList = CDEManager.getCDEManager().getPermissibleValueList(Constants.CDE_NAME_CONTAINER, null);
+				final String container = ((CollectionEventParameters) eventParameter)
+						.getContainer();
+				final List containerList = CDEManager.getCDEManager().getPermissibleValueList(
+						Constants.CDE_NAME_CONTAINER, null);
 				if (!Validator.isEnumeratedOrNullValue(containerList, container))
 				{
-					throw getBizLogicException(null, "events.container.errMsg", "");
+					throw this.getBizLogicException(null, "events.container.errMsg", "");
 				}
 				/**
 				 * Name : Vijay_Pande
@@ -649,95 +701,109 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 				 */
 				if (!validator.isValidOption(container))
 				{
-					String message = ApplicationProperties.getValue("collectioneventparameters.container");
-					throw getBizLogicException(null, "errors.item.required", message);
+					final String message = ApplicationProperties
+							.getValue("collectioneventparameters.container");
+					throw this.getBizLogicException(null, "errors.item.required", message);
 				}
 				/** -- patch ends here --*/
 				break;
 
 			case Constants.EMBEDDED_EVENT_PARAMETERS_FORM_ID :
-				String embeddingMedium = ((EmbeddedEventParameters) eventParameter).getEmbeddingMedium();
-				List embeddingMediumList = CDEManager.getCDEManager().getPermissibleValueList(Constants.CDE_NAME_EMBEDDING_MEDIUM, null);
+				final String embeddingMedium = ((EmbeddedEventParameters) eventParameter)
+						.getEmbeddingMedium();
+				final List embeddingMediumList = CDEManager.getCDEManager()
+						.getPermissibleValueList(Constants.CDE_NAME_EMBEDDING_MEDIUM, null);
 				if (!Validator.isEnumeratedValue(embeddingMediumList, embeddingMedium))
 				{
-					throw getBizLogicException(null, "events.embeddingMedium.errMsg", "");
+					throw this.getBizLogicException(null, "events.embeddingMedium.errMsg", "");
 				}
 				break;
 
 			case Constants.FIXED_EVENT_PARAMETERS_FORM_ID :
-				String fixationType = ((FixedEventParameters) eventParameter).getFixationType();
-				List fixationTypeList = CDEManager.getCDEManager().getPermissibleValueList(Constants.CDE_NAME_FIXATION_TYPE, null);
+				final String fixationType = ((FixedEventParameters) eventParameter)
+						.getFixationType();
+				final List fixationTypeList = CDEManager.getCDEManager().getPermissibleValueList(
+						Constants.CDE_NAME_FIXATION_TYPE, null);
 				if (!Validator.isEnumeratedValue(fixationTypeList, fixationType))
 				{
-					
-					throw getBizLogicException(null, "events.fixationType.errMsg", "");
+
+					throw this.getBizLogicException(null, "events.fixationType.errMsg", "");
 				}
 				break;
 
 			case Constants.FROZEN_EVENT_PARAMETERS_FORM_ID :
-				String method = ((FrozenEventParameters) eventParameter).getMethod();
-				List methodList = CDEManager.getCDEManager().getPermissibleValueList(Constants.CDE_NAME_METHOD, null);
+				final String method = ((FrozenEventParameters) eventParameter).getMethod();
+				final List methodList = CDEManager.getCDEManager().getPermissibleValueList(
+						Constants.CDE_NAME_METHOD, null);
 				if (!Validator.isEnumeratedValue(methodList, method))
 				{
-				
-					throw getBizLogicException(null,"events.method.errMsg", "");
+
+					throw this.getBizLogicException(null, "events.method.errMsg", "");
 				}
 				break;
 
 			case Constants.RECEIVED_EVENT_PARAMETERS_FORM_ID :
-				String quality = ((ReceivedEventParameters) eventParameter).getReceivedQuality();
-				List qualityList = CDEManager.getCDEManager().getPermissibleValueList(Constants.CDE_NAME_RECEIVED_QUALITY, null);
+				final String quality = ((ReceivedEventParameters) eventParameter)
+						.getReceivedQuality();
+				final List qualityList = CDEManager.getCDEManager().getPermissibleValueList(
+						Constants.CDE_NAME_RECEIVED_QUALITY, null);
 				if (!Validator.isEnumeratedValue(qualityList, quality))
 				{
-					
-					throw getBizLogicException(null,"events.receivedQuality.errMsg", "");
+
+					throw this.getBizLogicException(null, "events.receivedQuality.errMsg", "");
 				}
 				break;
 
 			case Constants.TISSUE_SPECIMEN_REVIEW_EVENT_PARAMETERS_FORM_ID :
-				String histQuality = ((TissueSpecimenReviewEventParameters) eventParameter).getHistologicalQuality();
-				List histologicalQualityList = CDEManager.getCDEManager().getPermissibleValueList(Constants.CDE_NAME_HISTOLOGICAL_QUALITY, null);
+				final String histQuality = ((TissueSpecimenReviewEventParameters) eventParameter)
+						.getHistologicalQuality();
+				final List histologicalQualityList = CDEManager.getCDEManager()
+						.getPermissibleValueList(Constants.CDE_NAME_HISTOLOGICAL_QUALITY, null);
 				if (!Validator.isEnumeratedOrNullValue(histologicalQualityList, histQuality))
 				{
-					
-					throw getBizLogicException(null,"events.histologicalQuality.errMsg", "");
+
+					throw this.getBizLogicException(null, "events.histologicalQuality.errMsg", "");
 				}
 				break;
 
 			case Constants.TRANSFER_EVENT_PARAMETERS_FORM_ID :
-				TransferEventParameters parameter = (TransferEventParameters) eventParameter;
-				Specimen specimen = getSpecimenObject(dao, parameter);
-//				Long fromContainerId = (Long) dao.retrieveAttribute(Specimen.class.getName(),parameter.getSpecimen().getId(),"specimenPosition");
-//				Integer pos1 = (Integer) dao.retrieveAttribute(Specimen.class.getName(),parameter.getSpecimen().getId(),"specimenPosition.positionDimensionOne");
-//				Integer pos2 = (Integer) dao.retrieveAttribute(Specimen.class.getName(),parameter.getSpecimen().getId(),"specimenPositionpositionDimensionTwo");
-				Long fromContainerId=null;
-				Integer pos1=null;
-				Integer pos2=null;
-				if(specimen.getSpecimenPosition()!=null)
+				final TransferEventParameters parameter = (TransferEventParameters) eventParameter;
+				final Specimen specimen = this.getSpecimenObject(dao, parameter);
+				//				Long fromContainerId = (Long) dao.retrieveAttribute(Specimen.class.getName(),parameter.getSpecimen().getId(),"specimenPosition");
+				//				Integer pos1 = (Integer) dao.retrieveAttribute(Specimen.class.getName(),parameter.getSpecimen().getId(),"specimenPosition.positionDimensionOne");
+				//				Integer pos2 = (Integer) dao.retrieveAttribute(Specimen.class.getName(),parameter.getSpecimen().getId(),"specimenPositionpositionDimensionTwo");
+				Long fromContainerId = null;
+				Integer pos1 = null;
+				Integer pos2 = null;
+				if (specimen.getSpecimenPosition() != null)
 				{
 					fromContainerId = specimen.getSpecimenPosition().getStorageContainer().getId();
 					pos1 = specimen.getSpecimenPosition().getPositionDimensionOne();
 					pos2 = specimen.getSpecimenPosition().getPositionDimensionTwo();
 				}
-				
-				if((fromContainerId == null && parameter.getFromStorageContainer() != null) || (fromContainerId != null && parameter.getFromStorageContainer() == null))
+
+				if ((fromContainerId == null && parameter.getFromStorageContainer() != null)
+						|| (fromContainerId != null && parameter.getFromStorageContainer() == null))
 				{
-					throw getBizLogicException(null,"spec.moved.diff.loc", specimen.getLabel());
+					throw this.getBizLogicException(null, "spec.moved.diff.loc", specimen
+							.getLabel());
 				}
-				else if((fromContainerId != null && parameter.getFromStorageContainer() != null) && 
-						!((fromContainerId.equals(parameter.getFromStorageContainer().getId()) && 
-								pos1.equals(parameter.getFromPositionDimensionOne())
-										&& pos2.equals(parameter.getFromPositionDimensionTwo()))))
+				else if ((fromContainerId != null && parameter.getFromStorageContainer() != null)
+						&& !((fromContainerId.equals(parameter.getFromStorageContainer().getId())
+								&& pos1.equals(parameter.getFromPositionDimensionOne()) && pos2
+								.equals(parameter.getFromPositionDimensionTwo()))))
 				{
-					
-					throw getBizLogicException(null,"spec.moved.diff.loc", specimen.getLabel());
+
+					throw this.getBizLogicException(null, "spec.moved.diff.loc", specimen
+							.getLabel());
 				}
-				if (parameter.getToStorageContainer() != null && parameter.getToStorageContainer().getName() != null)				
+				if (parameter.getToStorageContainer() != null
+						&& parameter.getToStorageContainer().getName() != null)
 				{
-					
-					StorageContainer storageContainerObj = parameter.getToStorageContainer();			
-					List list = retrieveStorageContainers(dao, parameter);
-					
+
+					final StorageContainer storageContainerObj = parameter.getToStorageContainer();
+					final List list = this.retrieveStorageContainers(dao, parameter);
+
 					if (!list.isEmpty())
 					{
 						storageContainerObj.setId((Long) list.get(0));
@@ -745,8 +811,10 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 					}
 					else
 					{
-						String message = ApplicationProperties.getValue("transfereventparameters.toposition");
-						throw getBizLogicException(null, "errors.invalid", message+" for specimen: "+specimen.getLabel());
+						final String message = ApplicationProperties
+								.getValue("transfereventparameters.toposition");
+						throw this.getBizLogicException(null, "errors.invalid", message
+								+ " for specimen: " + specimen.getLabel());
 					}
 
 					Integer xPos = parameter.getToPositionDimensionOne();
@@ -760,22 +828,24 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 					{
 						isContainerFull = true;
 						Map containerMapFromCache = null;
-						containerMapFromCache = (TreeMap) StorageContainerUtil.getContainerMapFromCache();
-						isContainerFull = setPositions(numberOfEvent, parameter,
+						containerMapFromCache = StorageContainerUtil.getContainerMapFromCache();
+						isContainerFull = this.setPositions(numberOfEvent, parameter,
 								storageContainerObj, isContainerFull, containerMapFromCache);
-							xPos = parameter.getToPositionDimensionOne();
-						    yPos = parameter.getToPositionDimensionTwo();
+						xPos = parameter.getToPositionDimensionOne();
+						yPos = parameter.getToPositionDimensionTwo();
 					}
-					if(isContainerFull)
+					if (isContainerFull)
 					{
-						
-						throw getBizLogicException(null, "storage.con.full","");
+
+						throw this.getBizLogicException(null, "storage.con.full", "");
 					}
-					else if (xPos == null || yPos == null || xPos.intValue() < 0 || yPos.intValue() < 0)
+					else if (xPos == null || yPos == null || xPos.intValue() < 0
+							|| yPos.intValue() < 0)
 					{
-						
-						throw getBizLogicException(null, "errors.item.format",ApplicationProperties
-								.getValue("transfereventparameters.toposition"));
+
+						throw this.getBizLogicException(null, "errors.item.format",
+								ApplicationProperties
+										.getValue("transfereventparameters.toposition"));
 					}
 				}
 				if (Constants.EDIT.equals(operation))
@@ -787,52 +857,63 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 		return true;
 	}
 
-	private List retrieveStorageContainers(DAO dao,
-			TransferEventParameters parameter) throws BizLogicException 
+	/**
+	 * @param dao - DAO object.
+	 * @param parameter - TransferEventParameters object
+	 * @return List of StorageContainers objects.
+	 * @throws BizLogicException throws BizLogicException
+	 */
+	private List retrieveStorageContainers(DAO dao, TransferEventParameters parameter)
+			throws BizLogicException
 	{
 		try
 		{
-			String sourceObjectName = StorageContainer.class.getName();
-			String[] selectColumnName = {"id"};
-			/*String[] whereColumnName = {"name"};
-		String[] whereColumnCondition = {"="};
-		Object[] whereColumnValue = {parameter.getToStorageContainer().getName()};
-		String joinCondition = null;*/
-
-			QueryWhereClause queryWhereClause = new QueryWhereClause(sourceObjectName);
-			queryWhereClause.addCondition(new EqualClause("name",parameter.getToStorageContainer().getName()));
-			List list = dao.retrieve(sourceObjectName, selectColumnName, queryWhereClause);
+			final String sourceObjectName = StorageContainer.class.getName();
+			final String[] selectColumnName = {"id"};
+			final QueryWhereClause queryWhereClause = new QueryWhereClause(sourceObjectName);
+			queryWhereClause.addCondition(new EqualClause("name", parameter.getToStorageContainer()
+					.getName()));
+			final List list = dao.retrieve(sourceObjectName, selectColumnName, queryWhereClause);
 			return list;
 		}
-		catch(DAOException daoExp)
+		catch (final DAOException daoExp)
 		{
-			logger.debug(daoExp.getMessage(), daoExp);
-			throw getBizLogicException(daoExp, daoExp.getErrorKeyName(),daoExp.getMsgValues());
-		}
-	}
-
-	private Specimen getSpecimenObject(DAO dao,
-			TransferEventParameters parameter) throws BizLogicException
-	{
-		try
-		{
-			Specimen specimen = (Specimen)dao.retrieveById(Specimen.class.getName(), parameter.getSpecimen().getId());
-			return specimen;
-		}
-		catch(DAOException daoExp)
-		{
-			logger.debug(daoExp.getMessage(), daoExp);
-			throw getBizLogicException(daoExp, daoExp.getErrorKeyName(),daoExp.getMsgValues());
+			this.logger.debug(daoExp.getMessage(), daoExp);
+			throw this
+					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
 		}
 	}
 
 	/**
-	 * @param numberOfEvent
-	 * @param parameter
-	 * @param storageContainerObj
-	 * @param isContainerFull
-	 * @param containerMapFromCache
-	 * @return
+	 * @param dao : DAO object.
+	 * @param parameter - TransferEventParameters object
+	 * @return Specimen obejct
+	 * @throws BizLogicException throws BizLogicException
+	 */
+	private Specimen getSpecimenObject(DAO dao, TransferEventParameters parameter)
+			throws BizLogicException
+	{
+		try
+		{
+			final Specimen specimen = (Specimen) dao.retrieveById(Specimen.class.getName(),
+					parameter.getSpecimen().getId());
+			return specimen;
+		}
+		catch (final DAOException daoExp)
+		{
+			this.logger.debug(daoExp.getMessage(), daoExp);
+			throw this
+					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
+		}
+	}
+
+	/**
+	 * @param numberOfEvent - int.
+	 * @param parameter - TransferEventParameters object
+	 * @param storageContainerObj - StorageContainer object
+	 * @param isContainerFull - boolean value
+	 * @param containerMapFromCache - Map of containers for cache
+	 * @return boolean based on set positions
 	 */
 	private boolean setPositions(int numberOfEvent, TransferEventParameters parameter,
 			StorageContainer storageContainerObj, boolean isContainerFull, Map containerMapFromCache)
@@ -840,258 +921,315 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 		List list;
 		if (containerMapFromCache != null)
 		{
-				Iterator itr = containerMapFromCache.keySet().iterator();
-				while (itr.hasNext())
+			final Iterator itr = containerMapFromCache.keySet().iterator();
+			while (itr.hasNext())
+			{
+				final NameValueBean nvb = (NameValueBean) itr.next();
+				if (nvb.getValue().toString().equals(storageContainerObj.getId().toString()))
 				{
-					NameValueBean nvb = (NameValueBean) itr.next();
-					if(nvb.getValue().toString().equals(storageContainerObj.getId().toString()))
+					final Map tempMap = (Map) containerMapFromCache.get(nvb);
+					final Iterator tempIterator = tempMap.keySet().iterator();
+					while (tempIterator.hasNext())
 					{
-						Map tempMap = (Map) containerMapFromCache.get(nvb);
-						Iterator tempIterator = tempMap.keySet().iterator();
-						while (tempIterator.hasNext())
+						final NameValueBean nvb1 = (NameValueBean) tempIterator.next();
+						list = (List) tempMap.get(nvb1);
+						NameValueBean nvb2;
+						//To get the next available location for this event number assuming the pervious ones were allocated to previous events in the list
+						if (numberOfEvent >= list.size())
 						{
-							NameValueBean nvb1 = (NameValueBean) tempIterator.next();
-							list = (List) tempMap.get(nvb1);
-							NameValueBean nvb2;
-							//To get the next available location for this event number assuming the pervious ones were allocated to previous events in the list
-							if(numberOfEvent >= list.size())
-							{
-								numberOfEvent= numberOfEvent - list.size();
-								continue;
-							}
-							nvb2 = (NameValueBean) list.get(numberOfEvent);
-							parameter.setToPositionDimensionOne(new Integer(nvb1.getValue()));
-							parameter.setToPositionDimensionTwo(new Integer(nvb2.getValue()));
-						    isContainerFull = false;
-						    break;
+							numberOfEvent = numberOfEvent - list.size();
+							continue;
 						}
+						nvb2 = (NameValueBean) list.get(numberOfEvent);
+						parameter.setToPositionDimensionOne(new Integer(nvb1.getValue()));
+						parameter.setToPositionDimensionTwo(new Integer(nvb2.getValue()));
+						isContainerFull = false;
 						break;
 					}
+					break;
 				}
 			}
+		}
 		return isContainerFull;
 	}
 
-	private void validateTransferEventParameters(SpecimenEventParameters eventParameter) throws BizLogicException
+	/**
+	 * @param eventParameter - SpecimenEventParameters object.
+	 * @throws BizLogicException throws BizLogicException
+	 */
+	private void validateTransferEventParameters(SpecimenEventParameters eventParameter)
+			throws BizLogicException
 	{
-		TransferEventParameters parameter = (TransferEventParameters) eventParameter;
-		Object object =  retrieve(TransferEventParameters.class.getName(), parameter.getId());
+		final TransferEventParameters parameter = (TransferEventParameters) eventParameter;
+		final Object object = this.retrieve(TransferEventParameters.class.getName(), parameter
+				.getId());
 		if (object != null)
 		{
-			TransferEventParameters parameterCopy = (TransferEventParameters) object;
-			String positionDimensionOne = parameterCopy.getToPositionDimensionOne().toString();
-			String positionDimensionTwo = parameterCopy.getToPositionDimensionTwo().toString();
-			String storageContainer = parameterCopy.getToStorageContainer().getId().toString();
+			final TransferEventParameters parameterCopy = (TransferEventParameters) object;
+			final String positionDimensionOne = parameterCopy.getToPositionDimensionOne()
+					.toString();
+			final String positionDimensionTwo = parameterCopy.getToPositionDimensionTwo()
+					.toString();
+			final String storageContainer = parameterCopy.getToStorageContainer().getId()
+					.toString();
 
 			if (!positionDimensionOne.equals(parameter.getToPositionDimensionOne().toString())
-					|| !positionDimensionTwo.equals(parameter.getToPositionDimensionTwo().toString())
-					|| !storageContainer.equals(parameter.getToStorageContainer().getId().toString()))
+					|| !positionDimensionTwo.equals(parameter.getToPositionDimensionTwo()
+							.toString())
+					|| !storageContainer.equals(parameter.getToStorageContainer().getId()
+							.toString()))
 			{
-				throw getBizLogicException(null, "events.toPosition.errMsg", "");
+				throw this.getBizLogicException(null, "events.toPosition.errMsg", "");
 			}
 		}
 	}
 
+	/**
+	 * @param specimen - Specimen object.
+	 */
 	private void setDisableToSubSpecimen(Specimen specimen)
 	{
 		if (specimen != null)
 		{
-			Iterator iterator = specimen.getChildSpecimenCollection().iterator();
+			final Iterator iterator = specimen.getChildSpecimenCollection().iterator();
 			while (iterator.hasNext())
 			{
-				Specimen childSpecimen = (Specimen) iterator.next();
+				final Specimen childSpecimen = (Specimen) iterator.next();
 				childSpecimen.setActivityStatus(Status.ACTIVITY_STATUS_DISABLED.toString());
-				setDisableToSubSpecimen(childSpecimen);
+				this.setDisableToSubSpecimen(childSpecimen);
 			}
 		}
 	}
 
-	private void disableSubSpecimens(DAO dao, String speID,List specimenIds) throws BizLogicException,DAOException
+	/**
+	 * @param dao - DAO object.
+	 * @param speID - String
+	 * @param specimenIds - List of specimenIds
+	 * @throws BizLogicException throws BizLogicException
+	 * @throws DAOException throws DAOException
+	 */
+	private void disableSubSpecimens(DAO dao, String speID, List specimenIds)
+			throws BizLogicException, DAOException
 	{
-		String sourceObjectName = Specimen.class.getName();
-		String[] selectColumnName = {edu.wustl.common.util.global.Constants.SYSTEM_IDENTIFIER};
-		/*String[] whereColumnName = {"parentSpecimen.id",Constants.ACTIVITY_STATUS};
-		String[] whereColumnCondition = {"=", "!="};
-		Object[] whereColumnValue = {new Long(speID), Status.ACTIVITY_STATUS_DISABLED.toString()};
-		String joinCondition = Constants.AND_JOIN_CONDITION;
-		*/
-		QueryWhereClause queryWhereClause = new QueryWhereClause(sourceObjectName);
-		queryWhereClause.addCondition(new EqualClause("parentSpecimen.id",Long.valueOf(speID))).andOpr().
-		addCondition(new NotEqualClause(Status.ACTIVITY_STATUS.toString(),Status.ACTIVITY_STATUS_DISABLED.toString()));
-		
+		final String sourceObjectName = Specimen.class.getName();
+		final String[] selectColumnName = {edu.wustl.common.util.global.Constants.SYSTEM_IDENTIFIER};
+		final QueryWhereClause queryWhereClause = new QueryWhereClause(sourceObjectName);
+		queryWhereClause.addCondition(new EqualClause("parentSpecimen.id", Long.valueOf(speID)))
+				.andOpr().addCondition(
+						new NotEqualClause(Status.ACTIVITY_STATUS.toString(),
+								Status.ACTIVITY_STATUS_DISABLED.toString()));
+
 		List listOfSpecimenIDs = dao.retrieve(sourceObjectName, selectColumnName, queryWhereClause);
-			listOfSpecimenIDs = edu.wustl.common.util.Utility.removeNull(listOfSpecimenIDs);
-			//getRelatedObjects(dao, Specimen.class, "parentSpecimen", speIDArr);
-			
-			if (!listOfSpecimenIDs.isEmpty())
-			{
-				if(specimenIds.containsAll(listOfSpecimenIDs))
-				{
-					return;
-				}
-			
-				ErrorKey errorKey = ErrorKey.getErrorKey("errors.specimen.contains.subspecimen");//errors.specimen.contains.subspecimen
-				throw new BizLogicException(errorKey,null ,"");
-			}
-			else
+		listOfSpecimenIDs = CommonUtilities.removeNull(listOfSpecimenIDs);
+		//getRelatedObjects(dao, Specimen.class, "parentSpecimen", speIDArr);
+
+		if (!listOfSpecimenIDs.isEmpty())
+		{
+			if (specimenIds.containsAll(listOfSpecimenIDs))
 			{
 				return;
-			}	
+			}
+
+			final ErrorKey errorKey = ErrorKey.getErrorKey("errors.specimen.contains.subspecimen");//errors.specimen.contains.subspecimen
+			throw new BizLogicException(errorKey, null, "");
+		}
+		else
+		{
+			return;
+		}
 	}
 
-	public List getRelatedObjects(DAO dao, Class sourceClass, String[] whereColumnName, String[] whereColumnValue, String[] whereColumnCondition)
-			throws BizLogicException
+	@Override
+	public List getRelatedObjects(DAO dao, Class sourceClass, String[] whereColumnName,
+			String[] whereColumnValue, String[] whereColumnCondition) throws BizLogicException
 	{
 		List list = null;
-		try 
+		try
 		{
-			String sourceObjectName = sourceClass.getName();
-			String joinCondition = Constants.AND_JOIN_CONDITION;
-			String selectColumnName[] = {edu.wustl.common.util.global.Constants.SYSTEM_IDENTIFIER};
-			QueryWhereClause queryWhereClause = new QueryWhereClause(sourceObjectName);
+			final String sourceObjectName = sourceClass.getName();
+			final String joinCondition = Constants.AND_JOIN_CONDITION;
+			final String selectColumnName[] = {edu.wustl.common.util.global.Constants.SYSTEM_IDENTIFIER};
+			final QueryWhereClause queryWhereClause = new QueryWhereClause(sourceObjectName);
 
-			queryWhereClause.getWhereCondition(whereColumnName, whereColumnCondition, whereColumnValue, joinCondition);
-
+			queryWhereClause.getWhereCondition(whereColumnName, whereColumnCondition,
+					whereColumnValue, joinCondition);
 
 			list = dao.retrieve(sourceObjectName, selectColumnName, queryWhereClause);
 
-			list = edu.wustl.common.util.Utility.removeNull(list);
-		} catch (DAOException e) {
-			logger.debug(e.getMessage(), e);
-			throw getBizLogicException(e, e.getErrorKeyName(),e.getMsgValues());
+			list = CommonUtilities.removeNull(list);
+		}
+		catch (final DAOException e)
+		{
+			this.logger.debug(e.getMessage(), e);
+			throw this.getBizLogicException(e, e.getErrorKeyName(), e.getMsgValues());
 		}
 		return list;
 	}
 
+	/**
+	 * @return Map of disabled specimen from cache.
+	 * @throws Exception throws Exception
+	 */
 	public Map getContForDisabledSpecimenFromCache() throws Exception
 	{
 		// TODO if map is null
 		// TODO move all code to common utility
 
 		// getting instance of catissueCoreCacheManager and getting participantMap from cache
-		CatissueCoreCacheManager catissueCoreCacheManager = CatissueCoreCacheManager.getInstance();
-		Map disabledconts = (TreeMap) catissueCoreCacheManager.getObjectFromCache(Constants.MAP_OF_CONTAINER_FOR_DISABLED_SPECIEN);
+		final CatissueCoreCacheManager catissueCoreCacheManager = CatissueCoreCacheManager
+				.getInstance();
+		final Map disabledconts = (TreeMap) catissueCoreCacheManager
+				.getObjectFromCache(Constants.MAP_OF_CONTAINER_FOR_DISABLED_SPECIEN);
 		return disabledconts;
 	}
-	
-	public List getSpecimenDataForBulkOperations(List specimenIds, SessionDataBean sessionDataBean, String queryString) throws BizLogicException
+
+	/**
+	 * @param specimenIds - List of specimen ids.
+	 * @param sessionDataBean - SessionDataBean object
+	 * @param queryString String
+	 * @return List of specimen data
+	 * @throws BizLogicException throws BizLogicException
+	 */
+	public List getSpecimenDataForBulkOperations(List specimenIds, SessionDataBean sessionDataBean,
+			String queryString) throws BizLogicException
 	{
 		List specimenDataList = null;
-		JDBCDAO jdbcDao = openJDBCSession();
+		final JDBCDAO jdbcDao = this.openJDBCSession();
 		try
 		{
-			StringBuffer specimenIdsString = new StringBuffer();
+			final StringBuffer specimenIdsString = new StringBuffer();
 			specimenIdsString.append("(");
-			for (int i=0; i< specimenIds.size(); i++)
+			for (int i = 0; i < specimenIds.size(); i++)
 			{
-				if(i == (specimenIds.size()-1))
+				if (i == (specimenIds.size() - 1))
 				{
 					specimenIdsString.append(specimenIds.get(i));
 				}
 				else
 				{
-					specimenIdsString.append(specimenIds.get(i)+", ");
+					specimenIdsString.append(specimenIds.get(i) + ", ");
 				}
 			}
 			specimenIdsString.append(")");
 
-			String sql =queryString+specimenIdsString;
+			final String sql = queryString + specimenIdsString;
 
-			
 			specimenDataList = jdbcDao.executeQuery(sql);
-			
+
 		}
-		catch(DAOException daoExp)
+		catch (final DAOException daoExp)
 		{
-			throw getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
+			throw this
+					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
 		}
 		finally
 		{
-			closeJDBCSession(jdbcDao);
+			this.closeJDBCSession(jdbcDao);
 		}
 		return specimenDataList;
 	}
-	
-	public List getSpecimenDataForBulkOperations(String operation, List specimenIds, SessionDataBean sessionDataBean) throws BizLogicException
+
+	/**
+	 * @param operation - String.
+	 * @param specimenIds - List of specimen ids.
+	 * @param sessionDataBean - SessionDataBean object
+	 * @return List of specimen data.
+	 * @throws BizLogicException throws BizLogicException
+	 */
+	public List getSpecimenDataForBulkOperations(String operation, List specimenIds,
+			SessionDataBean sessionDataBean) throws BizLogicException
 	{
-		if(operation.equals(Constants.BULK_TRANSFERS))
+		if (operation.equals(Constants.BULK_TRANSFERS))
 		{
-			return getSpecimenDataForBulkTransfers(specimenIds, sessionDataBean);
+			return this.getSpecimenDataForBulkTransfers(specimenIds, sessionDataBean);
 		}
 		else
 		{
-			return getSpecimenDataForBulkDisposals(specimenIds, sessionDataBean);
+			return this.getSpecimenDataForBulkDisposals(specimenIds, sessionDataBean);
 		}
 	}
-	
-	public List getSpecimenDataForBulkTransfers(List specimenIds, SessionDataBean sessionDataBean) throws BizLogicException
+
+	/**
+	 * @param specimenIds - List of specim ids.
+	 * @param sessionDataBean - SessionDataBean  object
+	 * @return List of specimen data
+	 * @throws BizLogicException throws BizLogicException
+	 */
+	public List getSpecimenDataForBulkTransfers(List specimenIds, SessionDataBean sessionDataBean)
+			throws BizLogicException
 	{
-		
-		String sql ="Select specimen.IDENTIFIER, specimen.LABEL, abstractSpecimen.SPECIMEN_CLASS, Container.NAME ," +
-				" abstractposition.POSITION_DIMENSION_ONE, abstractposition.POSITION_DIMENSION_TWO, Container.IDENTIFIER " 
-			+" from catissue_specimen specimen left join catissue_abstract_specimen abstractSpecimen on (abstractSpecimen.identifier=specimen.identifier )  "
-			+ "left join catissue_specimen_position specimenPosition on (specimen.identifier = specimenPosition.specimen_id) "
-			+" left join catissue_container Container on (specimenPosition.Container_id=Container.IDENTIFIER) "
-			+" left join catissue_abstract_position  abstractposition  on (abstractposition.Identifier=specimenPosition.IDENTIFIER )"
-			+" where specimen.IDENTIFIER in ";
-		return getSpecimenDataForBulkOperations(specimenIds, sessionDataBean, sql);
+
+		final String sql = "Select specimen.IDENTIFIER, specimen.LABEL, abstractSpecimen.SPECIMEN_CLASS, Container.NAME ,"
+				+ " abstractposition.POSITION_DIMENSION_ONE, abstractposition.POSITION_DIMENSION_TWO, Container.IDENTIFIER "
+				+ " from catissue_specimen specimen left join catissue_abstract_specimen abstractSpecimen on (abstractSpecimen.identifier=specimen.identifier )  "
+				+ "left join catissue_specimen_position specimenPosition on (specimen.identifier = specimenPosition.specimen_id) "
+				+ " left join catissue_container Container on (specimenPosition.Container_id=Container.IDENTIFIER) "
+				+ " left join catissue_abstract_position  abstractposition  on (abstractposition.Identifier=specimenPosition.IDENTIFIER )"
+				+ " where specimen.IDENTIFIER in ";
+		return this.getSpecimenDataForBulkOperations(specimenIds, sessionDataBean, sql);
 	}
-	
-	public List getSpecimenDataForBulkDisposals(List specimenIds, SessionDataBean sessionDataBean) throws BizLogicException
+
+	/**
+	 * @param specimenIds - List of specimen ids.
+	 * @param sessionDataBean - SessionDataBean object
+	 * @return List of specimen data
+	 * @throws BizLogicException throws BizLogicException
+	 */
+	public List getSpecimenDataForBulkDisposals(List specimenIds, SessionDataBean sessionDataBean)
+			throws BizLogicException
 	{
-		String sql = "Select specimen.IDENTIFIER, specimen.LABEL "
-			+"from catissue_specimen specimen "
-			+"where specimen.IDENTIFIER in ";
-		return getSpecimenDataForBulkOperations(specimenIds, sessionDataBean, sql);
+		final String sql = "Select specimen.IDENTIFIER, specimen.LABEL "
+				+ "from catissue_specimen specimen " + "where specimen.IDENTIFIER in ";
+		return this.getSpecimenDataForBulkOperations(specimenIds, sessionDataBean, sql);
 	}
-	
+
 	/**
 	 * Called from DefaultBizLogic to get ObjectId for authorization check
 	 * (non-Javadoc)
 	 * @see edu.wustl.common.bizlogic.DefaultBizLogic#getObjectId(edu.wustl.common.dao.DAO, java.lang.Object)
 	 */
-	public String getObjectId(DAO dao, Object domainObject) 
+	@Override
+	public String getObjectId(DAO dao, Object domainObject)
 	{
 		String objectId = "";
-		try 
+		try
 		{
 
 			//TODO Optimize This code with HQL
-			if(domainObject instanceof SpecimenEventParameters)
+			if (domainObject instanceof SpecimenEventParameters)
 			{
 				SpecimenCollectionGroup scg = null;
-				SpecimenEventParameters specimenEventParameters = (SpecimenEventParameters) domainObject;
-				AbstractSpecimen specimen = (AbstractSpecimen) specimenEventParameters.getSpecimen();
-
+				final SpecimenEventParameters specimenEventParameters = (SpecimenEventParameters) domainObject;
+				AbstractSpecimen specimen = specimenEventParameters.getSpecimen();
 
 				specimen = (Specimen) dao.retrieveById(Specimen.class.getName(), specimen.getId());
-				Specimen specimen1 = (Specimen) specimen;
+				final Specimen specimen1 = (Specimen) specimen;
 				scg = specimen1.getSpecimenCollectionGroup();
 
-				CollectionProtocolRegistration cpr = scg.getCollectionProtocolRegistration();
-				CollectionProtocol cp = cpr.getCollectionProtocol();
-				objectId = Constants.COLLECTION_PROTOCOL_CLASS_NAME+"_"+cp.getId();
-
+				final CollectionProtocolRegistration cpr = scg.getCollectionProtocolRegistration();
+				final CollectionProtocol cp = cpr.getCollectionProtocol();
+				objectId = Constants.COLLECTION_PROTOCOL_CLASS_NAME + "_" + cp.getId();
 
 			}
-		} 
-		catch (DAOException e) 
+		}
+		catch (final DAOException e)
 		{
-			logger.debug(e.getMessage(), e);
+			this.logger.debug(e.getMessage(), e);
 		}
 		return objectId;
 	}
-	
+
 	/**
 	 * To get PrivilegeName for authorization check from 'PermissionMapDetails.xml'
 	 * (non-Javadoc)
 	 * @see edu.wustl.common.bizlogic.DefaultBizLogic#getPrivilegeName(java.lang.Object)
 	 */
+	@Override
 	protected String getPrivilegeKey(Object domainObject)
-    {
-    	return Constants.ADD_EDIT_SPECIMEN_EVENTS;
-    }
-	
+	{
+		return Constants.ADD_EDIT_SPECIMEN_EVENTS;
+	}
+
 	/**
 	 * (non-Javadoc)
 	 * @throws UserNotAuthorizedException 
@@ -1099,139 +1237,166 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 	 * @see edu.wustl.common.bizlogic.DefaultBizLogic#isAuthorized(edu.wustl.common.dao.DAO, java.lang.Object, edu.wustl.common.beans.SessionDataBean)
 	 * 
 	 */
-	public boolean isAuthorized(DAO dao, Object domainObject, SessionDataBean sessionDataBean) throws BizLogicException
+	@Override
+	public boolean isAuthorized(DAO dao, Object domainObject, SessionDataBean sessionDataBean)
+			throws BizLogicException
 	{
 		boolean isAuthorized = false;
 		boolean validOperation;
 		String protectionElementName = null;
 		String privilegeName = null;
-		
+
 		try
 		{
-		if(sessionDataBean != null && sessionDataBean.isAdmin())
-		{
-			return true;
-		}
-		
-		//	Get the base object id against which authorization will take place 
-		if(domainObject instanceof List)
-		{
-		    List list = (List) domainObject;
-			for(Object domainObject2 : list)
+			if (sessionDataBean != null && sessionDataBean.isAdmin())
 			{
-				if(domainObject2 instanceof TransferEventParameters)
+				return true;
+			}
+
+			//	Get the base object id against which authorization will take place 
+			if (domainObject instanceof List)
+			{
+				final List list = (List) domainObject;
+				for (final Object domainObject2 : list)
 				{
-					checkPrivilegeOnDestinationSite(dao, domainObject2, sessionDataBean);
-				}
-				protectionElementName = getObjectId(dao, domainObject2);
-				checkPrivilegeOnSourceSite(dao, domainObject2, sessionDataBean);
-				privilegeName = getPrivilegeName(domainObject2);
-				validOperation = AppUtility.checkPrivilegeOnCP(domainObject2, protectionElementName, privilegeName, sessionDataBean);
-				if(!validOperation)
-				{
-					isAuthorized = false;
-					break;
-				}
-				else
-				{
-					isAuthorized = true;
+					if (domainObject2 instanceof TransferEventParameters)
+					{
+						this.checkPrivilegeOnDestinationSite(dao, domainObject2, sessionDataBean);
+					}
+					protectionElementName = this.getObjectId(dao, domainObject2);
+					this.checkPrivilegeOnSourceSite(dao, domainObject2, sessionDataBean);
+					privilegeName = this.getPrivilegeName(domainObject2);
+					validOperation = AppUtility.checkPrivilegeOnCP(domainObject2,
+							protectionElementName, privilegeName, sessionDataBean);
+					if (!validOperation)
+					{
+						isAuthorized = false;
+						break;
+					}
+					else
+					{
+						isAuthorized = true;
+					}
 				}
 			}
-		}
-		else	
-		{
-			// Handle for SERIAL CHECKS, whether user has access to source site or not
-			if(domainObject instanceof TransferEventParameters)
+			else
 			{
-				checkPrivilegeOnDestinationSite(dao, domainObject, sessionDataBean);
+				// Handle for SERIAL CHECKS, whether user has access to source site or not
+				if (domainObject instanceof TransferEventParameters)
+				{
+					this.checkPrivilegeOnDestinationSite(dao, domainObject, sessionDataBean);
+				}
+				this.checkPrivilegeOnSourceSite(dao, domainObject, sessionDataBean);
+				privilegeName = this.getPrivilegeName(domainObject);
+				protectionElementName = this.getObjectId(dao, domainObject);
+				isAuthorized = AppUtility.checkPrivilegeOnCP(domainObject, protectionElementName,
+						privilegeName, sessionDataBean);
 			}
-			checkPrivilegeOnSourceSite(dao, domainObject, sessionDataBean);
-			privilegeName = getPrivilegeName(domainObject);
-			protectionElementName = getObjectId(dao, domainObject);
-			isAuthorized = AppUtility.checkPrivilegeOnCP(domainObject, protectionElementName, privilegeName, sessionDataBean);
 		}
-		}
-		catch(ApplicationException daoExp)
+		catch (final ApplicationException daoExp)
 		{
-			logger.debug(daoExp.getMessage(), daoExp);
-			throw getBizLogicException(daoExp, daoExp.getErrorKeyName(),daoExp.getMsgValues());
+			this.logger.debug(daoExp.getMessage(), daoExp);
+			throw this
+					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
 		}
 		if (!isAuthorized)
-        {
-			throw AppUtility.getUserNotAuthorizedException(privilegeName, protectionElementName,domainObject.getClass().getSimpleName());   //bug 11611 and 11659
-        }
-		return isAuthorized;	
-		
+		{
+			throw AppUtility.getUserNotAuthorizedException(privilegeName, protectionElementName,
+					domainObject.getClass().getSimpleName()); //bug 11611 and 11659
+		}
+		return isAuthorized;
 
 	}
 
-	private void checkPrivilegeOnDestinationSite(DAO dao, Object domainObject, SessionDataBean sessionDataBean) throws BizLogicException
+	/**
+	 * @param dao : DAO object.
+	 * @param domainObject - Object
+	 * @param sessionDataBean -SessionDataBean object
+	 * @throws BizLogicException throws BizLogicException
+	 */
+	private void checkPrivilegeOnDestinationSite(DAO dao, Object domainObject,
+			SessionDataBean sessionDataBean) throws BizLogicException
 	{
 		try
 		{
-			TransferEventParameters tep = (TransferEventParameters) domainObject;
+			final TransferEventParameters tep = (TransferEventParameters) domainObject;
 			StorageContainer sc = null;
 
-			if(tep.getToStorageContainer().getName() == null && tep.getToStorageContainer().getId() == null)
+			if (tep.getToStorageContainer().getName() == null
+					&& tep.getToStorageContainer().getId() == null)
 			{
 				return; // Case when To & FROM Storage containers are the same
 			}
 			List list = null;
-			if(tep.getToStorageContainer().getId() == null)
+			if (tep.getToStorageContainer().getId() == null)
 			{
-				list = dao.retrieve(StorageContainer.class.getName(), Constants.NAME, tep.getToStorageContainer().getName());
+				list = dao.retrieve(StorageContainer.class.getName(), Constants.NAME, tep
+						.getToStorageContainer().getName());
 			}
 			else
 			{
-				list = dao.retrieve(StorageContainer.class.getName(), Constants.ID, tep.getToStorageContainer().getId());
+				list = dao.retrieve(StorageContainer.class.getName(), Constants.ID, tep
+						.getToStorageContainer().getId());
 			}
-			if(list.isEmpty())
+			if (list.isEmpty())
 			{
-				throw getBizLogicException(null, "sc.unableToFindContainer", "");
+				throw this.getBizLogicException(null, "sc.unableToFindContainer", "");
 			}
 			sc = (StorageContainer) list.get(0);
 
-			Site site = sc.getSite();
-			Set<Long> siteIdSet = new UserBizLogic().getRelatedSiteIds(sessionDataBean.getUserId());
+			final Site site = sc.getSite();
+			final Set<Long> siteIdSet = new UserBizLogic().getRelatedSiteIds(sessionDataBean
+					.getUserId());
 
-			if(!siteIdSet.contains(site.getId()))
+			if (!siteIdSet.contains(site.getId()))
 			{
-				throw AppUtility.getUserNotAuthorizedException(Constants.Association, site.getObjectId(),domainObject.getClass().getSimpleName());
-			}	
+				throw AppUtility.getUserNotAuthorizedException(Constants.Association, site
+						.getObjectId(), domainObject.getClass().getSimpleName());
+			}
 		}
-		catch(ApplicationException appExp)
+		catch (final ApplicationException appExp)
 		{
-			logger.debug(appExp.getMessage(), appExp);
-			throw getBizLogicException(appExp, appExp.getErrorKeyName(),appExp.getMsgValues());
+			this.logger.debug(appExp.getMessage(), appExp);
+			throw this
+					.getBizLogicException(appExp, appExp.getErrorKeyName(), appExp.getMsgValues());
 		}
 	}
 
-	private void checkPrivilegeOnSourceSite(DAO dao, Object domainObject, SessionDataBean sessionDataBean) throws BizLogicException
+	/**
+	 * @param dao - DAO object.
+	 * @param domainObject - Object
+	 * @param sessionDataBean - BizLogicException obejct
+	 * @throws BizLogicException throws BizLogicException
+	 */
+	private void checkPrivilegeOnSourceSite(DAO dao, Object domainObject,
+			SessionDataBean sessionDataBean) throws BizLogicException
 	{
 		SpecimenPosition specimenPosition = null;
-	
-		SpecimenEventParameters spe = (SpecimenEventParameters) domainObject;
-		AbstractSpecimen specimen = (AbstractSpecimen) spe.getSpecimen();
-		
-		try 
+
+		final SpecimenEventParameters spe = (SpecimenEventParameters) domainObject;
+		AbstractSpecimen specimen = spe.getSpecimen();
+
+		try
 		{
-			
+
 			specimen = (Specimen) dao.retrieveById(Specimen.class.getName(), specimen.getId());
-			Specimen specimen1 = (Specimen) specimen;
+			final Specimen specimen1 = (Specimen) specimen;
 			specimenPosition = specimen1.getSpecimenPosition();
-			
-			if(specimenPosition != null) // Specimen is NOT Virtually Located
+
+			if (specimenPosition != null) // Specimen is NOT Virtually Located
 			{
-				StorageContainer sc = specimenPosition.getStorageContainer();
-				Site site = sc.getSite();
-				
-				Set<Long> siteIdSet = new UserBizLogic().getRelatedSiteIds(sessionDataBean.getUserId());
-				
-				if(!siteIdSet.contains(site.getId()))
+				final StorageContainer sc = specimenPosition.getStorageContainer();
+				final Site site = sc.getSite();
+
+				final Set<Long> siteIdSet = new UserBizLogic().getRelatedSiteIds(sessionDataBean
+						.getUserId());
+
+				if (!siteIdSet.contains(site.getId()))
 				{
 					//bug 11611 and 11659 start
 					//UserNotAuthorizedException ex = 
-					throw AppUtility.getUserNotAuthorizedException(Constants.Association,specimen.getObjectId(),domainObject.getClass().getSimpleName());
+					throw AppUtility.getUserNotAuthorizedException(Constants.Association, specimen
+							.getObjectId(), domainObject.getClass().getSimpleName());
 					/*if(ex.getBaseObject()==null)
 					{
 						ex.setBaseObject("Specimen");
@@ -1240,15 +1405,12 @@ public class SpecimenEventParametersBizLogic extends CatissueDefaultBizLogic
 					//bug 11611 and 11659 end
 				}
 			}
-		} 
-		catch (DAOException e) 
-		{
-			
-			throw getBizLogicException(e, e.getErrorKeyName(),e.getMsgValues());
 		}
-		finally
+		catch (final DAOException e)
 		{
-			
-		}		
+
+			throw this.getBizLogicException(e, e.getErrorKeyName(), e.getMsgValues());
+		}
+
 	}
-} 
+}
